# Redixel

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  config.json  index.html  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build-and-test.yml  ci.yml  deploy-frontend.yml  tests.yml
config/: CONFIG.md  config.json
crates/redixel/: Cargo.toml
crates/redixel-core/: Cargo.toml
crates/redixel-core/src/: error.rs  game.rs  input.rs  lib.rs
crates/redixel-math/: Cargo.toml
crates/redixel-math/src/: color.rs  lib.rs  mat4.rs  vec2.rs
crates/redixel-platform/: Cargo.toml
crates/redixel-platform/src/: input.rs  lib.rs  window.rs
crates/redixel-renderer/: Cargo.toml
crates/redixel-renderer/shaders/: shape.wgsl
crates/redixel-renderer/src/: batch.rs  device.rs  lib.rs  pipeline.rs  renderer.rs
crates/redixel-runtime/: Cargo.toml
crates/redixel-runtime/src/: context.rs  lib.rs  runtime.rs  settings.rs  time.rs
crates/redixel/src/: lib.rs
examples/clear_color/: Cargo.toml
examples/clear_color/src/: main.rs
examples/hello_triangle/: Cargo.toml
examples/hello_triangle/src/: main.rs
examples/pong/: Cargo.toml
examples/pong/src/: lib.rs  main.rs
examples/shooter/: Cargo.toml
examples/shooter/src/: lib.rs  main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: lib.rs  main.rs
examples/triangle_3d/: Cargo.toml
examples/triangle_3d/src/: lib.rs  main.rs
src/: engine.rs  lib.rs  main.rs
src/engine/: error.rs  graphics.rs  mod.rs  runtime.rs  settings.rs  time.rs
src/engine/core/time/: fps.rs
src/engine/graphics/: renderer.rs  renderer_device.rs
src/engine/plataform/: mod.rs  window.rs
src/engine/plataform/core/: core.rs
src/engine/plataform/event_loop/: event_loop.rs  mod.rs
src/engine/plataform/input/: input.rs  mod.rs
src/engine/plataform/window/: mod.rs  window.rs
src/engine/platform/: input.rs  window.rs
tools/builder/: Cargo.toml
tools/builder/src/: main.rs
