[package]
name = "red_pixel"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }
console_log = "1.0"
console_error_panic_hook = "0.1"

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
pollster = "0.4.0"
wgpu = "27.0.1"
winit = "0.31.0-beta.2"