[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Redixel Core Team"]
repository = "https://github.com/RedixelCoreTeam"

[workspace.dependencies]
# Internal crates
redixel          = { path = "crates/redixel" }
redixel-core     = { path = "crates/redixel-core" }
redixel-platform = { path = "crates/redixel-platform" }
redixel-renderer = { path = "crates/redixel-renderer" }
redixel-runtime  = { path = "crates/redixel-runtime" }

# External
env_logger   = "0.11"
log          = "0.4"
pollster     = "0.4"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "2"
winit        = "0.31.0-beta.2"
wgpu         = "27.0.1"

# WASM-only
console_error_panic_hook = "0.1"
console_log              = "1.0"
wasm-bindgen             = "0.2"
wasm-bindgen-futures     = "0.4"
wgpu-webgl = { version = "27.0.1", package = "wgpu", features = ["webgl"] }
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }
web-time = "1.1"