[workspace]
members = ["crates/*", "examples/*", "tools/builder"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Redixel Core Team"]
repository = "https://github.com/RedixelCoreTeam"

[workspace.dependencies]
# Internal crates
redixel = { path = "crates/redixel" }
redixel-math = { path = "crates/redixel-math" }
redixel-core = { path = "crates/redixel-core" }
redixel-platform = { path = "crates/redixel-platform" }
redixel-renderer = { path = "crates/redixel-renderer" }
redixel-runtime = { path = "crates/redixel-runtime" }

# External crates
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
winit = { version = "0.31.0-beta.2", features = ["android-native-activity"] }
wgpu = "27.0.1"
bytemuck = { version = "1.25.0", features = ["derive"] }

# WASM
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu-webgl = { version = "27.0.1", package = "wgpu", features = ["webgl"] }
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }
web-time = "1.1"

# Android
android_logger = "0.15.1"