[package]
name = "redixel-core"
description = "Core error types and shared primitives for the Redixel engine."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
redixel-math = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = { workspace = true }
wasm-bindgen = { workspace = true }
console_log = { workspace = true }