[package]
name = "redixel-platform"
description = "OS abstraction layer for Redixel: window management and input handling."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
redixel-core = { workspace = true }
log = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }