[package]
name = "redixel-renderer"
description = "WGPU-backed renderer for the Redixel engine."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
redixel-core = { workspace = true }
redixel-math = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }