[package]
name = "redixel-runtime"
description = "Engine runtime: application loop, settings, and time management."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
redixel-core = { workspace = true }
redixel-platform = { workspace = true }
redixel-renderer = { workspace = true }
redixel-math = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
web-time = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { workspace = true }