[package]
name = "redixel"
description = "Public façade and entry point for the Redixel engine."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
redixel-core = { workspace = true }
redixel-platform = { workspace = true }
redixel-renderer = { workspace = true }
redixel-runtime  = { workspace = true }
log = { workspace = true }
winit = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log  = { workspace = true }
wasm-bindgen = { workspace = true }