[package]
name = "hello_triangle"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
redixel = { workspace = true }
log = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }