[package]
name = "triangle"
version.workspace = true
edition.workspace = true
publish = false

[package.metadata.game]
title = "Triangle"
description = "A fundamental rendering test displaying a 2D colored triangle using the Redixel rendering pipeline."
tags = ["2D", "Rendering"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redixel = { workspace = true }
log = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
console_log = { workspace = true }