[package]
name = "triangle_3d"
version.workspace = true
edition.workspace = true
publish = false

[package.metadata.game]
title = "Triangle 3D"
description = "A rotating 3D triangle demonstrating mathematical projections, Z-sorting, and 3D transformations."
tags = ["3D", "Math", "Projection"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redixel = { workspace = true }
log = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
console_log = { workspace = true }