[package]
name = "builder"
description = "An internal build tool that extracts game metadata from workspace packages and generates a JSON manifest for the Redixel Web frontend."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"